--- a/public/roster/index.html
+++ b/public/roster/index.html
@@ -144,7 +144,7 @@
       width: min(520px, 100%);
       padding: 12px 14px;
       border-radius: 12px;
-      border: 2px solid #000; /* ✅ visible outline */
+      border: 2px solid #000;
       outline: none;
       background: rgba(255,255,255,.85);
       font-size: 14px;
@@ -156,93 +156,6 @@
       border: 1px solid rgba(0,0,0,.12);
       background: rgba(255,255,255,.85);
       font-size: 14px;
-    }
-
-    /* ✅ STREAK UI */
-    .streak-wrap{
-      display:flex;
-      align-items:center;
-      gap:10px;
-      flex-wrap:wrap;
-      justify-content: space-between;
-    }
-    .streak-card{
-      display:flex;
-      align-items:center;
-      gap:10px;
-      padding: 10px 12px;
-      border-radius: 14px;
-      border: 1px solid rgba(31,78,121,.18);
-      background: rgba(31,78,121,.06);
-      box-shadow: 0 4px 12px rgba(0,0,0,.04);
-      min-width: min(520px, 100%);
-    }
-    .streak-icon{
-      width: 34px;
-      height: 34px;
-      border-radius: 12px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight: 900;
-      border: 1px solid rgba(178,34,34,.25);
-      background: rgba(178,34,34,.10);
-      color: #7f1d1d;
-      flex: 0 0 auto;
-    }
-    .streak-main{
-      display:flex;
-      flex-direction: column;
-      gap: 2px;
-      min-width: 220px;
-    }
-    .streak-title{
-      font-size: 12px;
-      letter-spacing: .07em;
-      text-transform: uppercase;
-      font-weight: 900;
-      color: var(--text-muted);
-      margin: 0;
-    }
-    .streak-value{
-      font-size: 16px;
-      font-weight: 900;
-      margin: 0;
-      color: var(--text-main);
-    }
-    .streak-sub{
-      font-size: 12px;
-      color: var(--text-muted);
-      margin: 0;
-    }
-    .streak-actions{
-      display:flex;
-      gap:8px;
-      flex-wrap:wrap;
-      margin-left:auto;
-      align-items:center;
-      justify-content:flex-end;
-    }
-    .btn-soft{
-      padding: 8px 12px;
-      font-size: 13px;
-      border-radius: var(--radius-pill);
-      border: 1px solid rgba(209,213,219,.9);
-      background: rgba(255,255,255,.65);
-      color: var(--text-main);
-      cursor: pointer;
-      font-weight: 900;
-      text-decoration: none;
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      white-space: nowrap;
-    }
-    .btn-soft:hover{ background: rgba(255,255,255,.85); }
-    .btn-soft.primary{
-      border-color: rgba(31,78,121,.25);
-      background: rgba(31,78,121,.08);
-      color: var(--blue);
     }
 
     .grid {
@@ -320,7 +233,7 @@
       gap:6px;
       padding: 4px 10px;
       border-radius: var(--radius-pill);
-      font-weight: 700;
+      font-weight: 800;
       font-size: 12px;
       text-transform: uppercase;
       letter-spacing: .07em;
@@ -389,10 +302,26 @@
     }
     .link:hover{ text-decoration: underline; }
 
+    .btn-soft{
+      padding: 8px 12px;
+      font-size: 13px;
+      border-radius: var(--radius-pill);
+      border: 1px solid rgba(209,213,219,.9);
+      background: rgba(255,255,255,.65);
+      color: var(--text-main);
+      cursor: pointer;
+      font-weight: 900;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      white-space: nowrap;
+    }
+    .btn-soft:hover{ background: rgba(255,255,255,.85); }
+
     @media (max-width: 640px) {
       header { flex-direction: column; align-items: flex-start; gap: 8px; }
       .detail-item { grid-column: span 12; }
-      .streak-card{ min-width: 100%; }
     }
   </style>
 </head>
@@ -433,23 +362,6 @@
 
       <div class="hr"></div>
 
-      <!-- ✅ STREAK -->
-      <div class="streak-wrap">
-        <div class="streak-card" aria-live="polite">
-          <div class="streak-icon">🔥</div>
-          <div class="streak-main">
-            <p class="streak-title">Daily streak</p>
-            <p class="streak-value" id="streakValue">—</p>
-            <p class="streak-sub" id="streakSub">Loading…</p>
-          </div>
-          <div class="streak-actions">
-            <button class="btn-soft primary" id="checkInBtn" type="button">Check in</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="hr"></div>
-
       <div class="searchbar">
         <input id="searchInput" type="search" placeholder="Search by name, email, or phone…" autocomplete="off" />
         <select id="typeFilter">
@@ -484,12 +396,10 @@
       getFirestore,
       doc,
       getDoc,
-      setDoc,
       collection,
       getDocs,
       query,
-      orderBy,
-      serverTimestamp
+      orderBy
     } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -522,18 +432,8 @@
     const searchInput = document.getElementById("searchInput");
     const typeFilter = document.getElementById("typeFilter");
 
-    // ✅ streak elements
-    const streakValueEl = document.getElementById("streakValue");
-    const streakSubEl = document.getElementById("streakSub");
-    const checkInBtn = document.getElementById("checkInBtn");
-
     let allUsers = [];
     let myRole = "pending";
-
-    // ✅ streak state
-    let currentUser = null;
-    let streakRef = null;
-    let streakData = null;
 
     function showError(msg){
       errorCard.style.display = "block";
@@ -610,12 +510,22 @@
     }
 
     function normalizePhoneForTel(raw){
-      // Keep digits and a leading +
       const p = (raw || "").toString().trim();
       if (!p) return "";
       let cleaned = p.replace(/[^\d+]/g, "");
       if (cleaned.includes("+")) cleaned = "+" + cleaned.replace(/\+/g, "");
       return cleaned;
+    }
+
+    function formatStreakLine(streak){
+      if (!streak) return { count: "0", sub: "No check-ins yet." };
+
+      const count = Number(streak.count || 0);
+      const lastKey = (streak.lastCheckinKey || "").toString().trim();
+
+      const countLabel = `${count} day${count === 1 ? "" : "s"}`;
+      const sub = lastKey ? `Last check-in: ${lastKey}` : "No check-ins yet.";
+      return { count: countLabel, sub };
     }
 
     function renderList(){
@@ -655,7 +565,7 @@
       usersGrid.style.display = "grid";
     }
 
-    function renderDetail(uid){
+    async function renderDetail(uid){
       const u = allUsers.find(x => x.uid === uid);
 
       if (!u) {
@@ -670,6 +580,16 @@
         return;
       }
 
+      // ✅ Load that person's streak doc
+      let streak = null;
+      try {
+        const streakSnap = await getDoc(doc(db, "accountInfo", uid, "streaks", "daily"));
+        streak = streakSnap.exists() ? (streakSnap.data() || {}) : null;
+      } catch (e) {
+        // If rules block it, show unknown rather than breaking the whole page
+        streak = { _error: true, message: e?.message || String(e) };
+      }
+
       const acctLabel = accountTypeLabel(u.accountType);
       const pillClass =
         (u.accountType || "").toLowerCase() === "leader" ? "pill" :
@@ -681,6 +601,18 @@
       const phoneHtml = rawPhone
         ? `<a class="link" href="tel:${escapeHtml(tel)}">${escapeHtml(rawPhone)}</a>`
         : "—";
+
+      let streakCountHtml = "0 days";
+      let streakSubHtml = "No check-ins yet.";
+
+      if (streak && streak._error) {
+        streakCountHtml = "—";
+        streakSubHtml = "Streak not readable (permissions).";
+      } else {
+        const fmt = formatStreakLine(streak);
+        streakCountHtml = fmt.count;
+        streakSubHtml = fmt.sub;
+      }
 
       detailWrap.innerHTML = `
         <div class="card detail-card">
@@ -712,6 +644,15 @@
             <div class="detail-item">
               <p class="detail-label">Account Type</p>
               <p class="detail-value">${escapeHtml(acctLabel)}</p>
+            </div>
+
+            <!-- ✅ NEW: STREAK -->
+            <div class="detail-item">
+              <p class="detail-label">Streak</p>
+              <p class="detail-value">🔥 ${escapeHtml(streakCountHtml)}</p>
+              <div class="muted small" style="margin-top:6px;">
+                ${escapeHtml(streakSubHtml)}
+              </div>
             </div>
 
             <div class="detail-item full">
@@ -778,128 +719,6 @@
       });
     }
 
-    // ✅ STREAK HELPERS (uses Firestore doc: accountInfo/{uid}/streaks/daily)
-    function todayKeyLocal(){
-      // YYYY-MM-DD in user's local time
-      const d = new Date();
-      const y = d.getFullYear();
-      const m = String(d.getMonth() + 1).padStart(2, "0");
-      const day = String(d.getDate()).padStart(2, "0");
-      return `${y}-${m}-${day}`;
-    }
-
-    function yesterdayKeyLocal(){
-      const d = new Date();
-      d.setDate(d.getDate() - 1);
-      const y = d.getFullYear();
-      const m = String(d.getMonth() + 1).padStart(2, "0");
-      const day = String(d.getDate()).padStart(2, "0");
-      return `${y}-${m}-${day}`;
-    }
-
-    function parseKeyToDate(key){
-      // key = YYYY-MM-DD
-      if (!key || !/^\d{4}-\d{2}-\d{2}$/.test(key)) return null;
-      const dt = new Date(key + "T00:00:00");
-      return isNaN(dt.getTime()) ? null : dt;
-    }
-
-    function daysBetween(a, b){
-      // midnight difference
-      const ms = 24 * 60 * 60 * 1000;
-      const aa = new Date(a.getFullYear(), a.getMonth(), a.getDate());
-      const bb = new Date(b.getFullYear(), b.getMonth(), b.getDate());
-      return Math.round((bb - aa) / ms);
-    }
-
-    function renderStreakUI(){
-      if (!streakData){
-        streakValueEl.textContent = "0 days";
-        streakSubEl.textContent = "Click “Check in” to start.";
-        checkInBtn.disabled = false;
-        return;
-      }
-
-      const count = Number(streakData.count || 0);
-      const lastKey = (streakData.lastCheckinKey || "").trim();
-
-      streakValueEl.textContent = `${count} day${count === 1 ? "" : "s"}`;
-
-      const tk = todayKeyLocal();
-      if (lastKey === tk){
-        streakSubEl.textContent = "Checked in today ✅";
-        checkInBtn.disabled = true;
-        checkInBtn.textContent = "Checked in";
-      } else {
-        streakSubEl.textContent = lastKey ? `Last check-in: ${lastKey}` : "No check-ins yet.";
-        checkInBtn.disabled = false;
-        checkInBtn.textContent = "Check in";
-      }
-    }
-
-    async function loadStreak(){
-      if (!currentUser) return;
-      streakRef = doc(db, "accountInfo", currentUser.uid, "streaks", "daily");
-      const snap = await getDoc(streakRef);
-      streakData = snap.exists() ? (snap.data() || {}) : null;
-      renderStreakUI();
-    }
-
-    async function doCheckIn(){
-      if (!currentUser) return;
-      checkInBtn.disabled = true;
-
-      const tk = todayKeyLocal();
-      const yk = yesterdayKeyLocal();
-
-      try {
-        // reload latest before writing
-        const snap = await getDoc(streakRef);
-        const data = snap.exists() ? (snap.data() || {}) : {};
-
-        const lastKey = (data.lastCheckinKey || "").trim();
-        let count = Number(data.count || 0);
-
-        if (lastKey === tk){
-          // already checked in today
-          streakData = data;
-          renderStreakUI();
-          return;
-        }
-
-        // determine new count
-        if (!lastKey) {
-          count = 1;
-        } else if (lastKey === yk) {
-          count = count + 1;
-        } else {
-          // also tolerate exact 1-day gap using date math, just in case of timezone edge
-          const lastDt = parseKeyToDate(lastKey);
-          const todayDt = parseKeyToDate(tk);
-          if (lastDt && todayDt && daysBetween(lastDt, todayDt) === 1) {
-            count = count + 1;
-          } else {
-            count = 1;
-          }
-        }
-
-        await setDoc(streakRef, {
-          count,
-          lastCheckinKey: tk,
-          lastCheckinAt: serverTimestamp(),
-          updatedAt: serverTimestamp()
-        }, { merge: true });
-
-        streakData = { ...(data || {}), count, lastCheckinKey: tk };
-        renderStreakUI();
-      } catch (e) {
-        showError("Streak check-in failed: " + (e?.message || String(e)));
-        checkInBtn.disabled = false;
-      }
-    }
-
-    checkInBtn.addEventListener("click", doCheckIn);
-
     wireEvents();
 
     onAuthStateChanged(auth, async (user) => {
@@ -909,7 +728,6 @@
           return;
         }
 
-        currentUser = user;
         authInfoEl.textContent = `Signed in as ${user.email || user.uid}`;
 
         myRole = await getMyRole(user.uid);
@@ -917,16 +735,13 @@
 
         if (!guardOrRedirect(user, myRole)) return;
 
-        // ✅ load streak after auth + role gate
-        await loadStreak();
-
         await loadUsers();
         loadingCard.style.display = "none";
 
         const uidParam = (getQueryParam("u") || "").trim();
         if (uidParam) {
           setMode("detail");
-          renderDetail(uidParam);
+          await renderDetail(uidParam);
         } else {
           setMode("list");
           renderList();
