--- a/public/accountinfo/index.html
+++ b/public/accountinfo/index.html
@@ -252,7 +252,7 @@ form button{
 </div>
 
 <section>
-<h2>Profile</h2>
+<h2>Profile (If you would like to change any fields which are not editable, reach out to dukes@troop-248.com)</h2>
 
 <div class="field">
 <label>Email</label>
