--- a/public/messaging/index.html
+++ b/public/messaging/index.html
@@ -226,11 +226,13 @@
     </div>
 
     <nav>
+      <a href="/home">Home</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
+      <a href="/scoutmaster">SM Blog</a>
+      <a href="/spl">SPL Blog</a>
+      <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
-      <a href="/roster">Roster</a>
-      <a href="/messaging">Messaging</a>
       <a href="/mail">Mail</a>
     </nav>
 
