--- a/public/home/index.html
+++ b/public/home/index.html
@@ -500,7 +500,15 @@
           <div class="feature-card">
             <div class="feature-badge">Contact</div>
             <h3 class="feature-title">Mail</h3>
-            <p class="feature-text">Reach out to other members of the troop.</p>
+            <p class="feature-text">Reach out to other members of the troop through email.</p>
+          </div>
+        </a>
+
+        <a href="/messaging" class="feature-card-link" data-title="Messaging">
+          <div class="feature-card">
+            <div class="feature-badge">Contact</div>
+            <h3 class="feature-title">Messaging</h3>
+            <p class="feature-text">Reach out to other members of the troop through chat.</p>
           </div>
         </a>
 
