--- a/public/home/index.html
+++ b/public/home/index.html
@@ -500,7 +500,7 @@
           <div class="feature-card">
             <div class="feature-badge">Contact</div>
             <h3 class="feature-title">Mail</h3>
-            <p class="feature-text">Reach out to other members of the troop through email.</p>
+            <p class="feature-text">Reach out to other members of the troop through an electronic mailing system, often referred to as "e-mail" or "email".</p>
           </div>
         </a>
 
