--- a/public/index.html
+++ b/public/index.html
@@ -305,7 +305,7 @@
   <main>
     <div class="welcome-card">
       <div>
-        <h3>Welcome to Troop 248 Portal. If you need help, reach out to tel:2484345508</h3>
+        <h3>Welcome to Troop 248 Portal.</h3>
         <p>
           This private site is for Troop 248 Scouts, parents, and adult leaders.
           Please log in to access member resources.
