--- a/public/roster/index.html
+++ b/public/roster/index.html
@@ -333,6 +333,7 @@
     </div>
 
     <nav>
+      <a href="/home">Home</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">SM Blog</a>
@@ -340,7 +341,6 @@
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
       <a href="/mail">Mail</a>
-      <a href="/roster">Roster</a>
     </nav>
 
     <div id="auth-bar">
