--- a/public/patrols/index.html
+++ b/public/patrols/index.html
@@ -344,6 +344,7 @@
     </div>
 
     <nav>
+      <a href="/home">Home</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">SM Blog</a>
