Apply 2026 visual theme across all site pages

--- a/public/backend/depths/backrooms/interdimensions/mantle/outer-core/inner-core/you-might-regret-it/i-told-you-not-to/well-here-we-go/sorry/good-luck/index.html
+++ b/public/backend/depths/backrooms/interdimensions/mantle/outer-core/inner-core/you-might-regret-it/i-told-you-not-to/well-here-we-go/sorry/good-luck/index.html
@@ -50,6 +50,7 @@
     50%{opacity:1; transform: translateZ(0) scale(1.03)}
   }
 </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 <body>
   <canvas id="c"></canvas>
