--- a/public/calendar/index.html
+++ b/public/calendar/index.html
@@ -349,6 +349,7 @@ body.dark-theme .badge {
       }
     }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 <body>
   <header>
