--- a/public/events-edit/index.html
+++ b/public/events-edit/index.html
@@ -200,6 +200,7 @@
     .col12 { grid-column: span 12; }
     @media (max-width: 820px){ .col6 { grid-column: span 12; } }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 <body>
   <header>
