--- a/public/events/event/index.html
+++ b/public/events/event/index.html
@@ -182,6 +182,7 @@
       header { align-items:flex-start; }
     }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 <body>
   <header>
