--- a/public/events/index.html
+++ b/public/events/index.html
@@ -315,6 +315,7 @@
       .event-title-row { flex-direction: column; align-items: flex-start; }
     }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 <body>
   <header>
