--- a/public/home/index.html
+++ b/public/home/index.html
@@ -369,6 +369,7 @@
   animation: flameWiggle 650ms ease;
 }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 <body>
   <header>
