--- a/public/login/index.html
+++ b/public/login/index.html
@@ -124,6 +124,7 @@
     }
     .smallLinks a { color: var(--blue); font-weight: 700; text-decoration: underline; }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 
 <body>
