--- a/public/roster/index.html
+++ b/public/roster/index.html
@@ -324,6 +324,7 @@
       .detail-item { grid-column: span 12; }
     }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 
 <body>
