--- a/public/under-review/index.html
+++ b/public/under-review/index.html
@@ -69,6 +69,7 @@
     }
     button:hover { opacity: 0.96; }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 <body>
   <div class="card">
