--- a/public/uploads/index.html
+++ b/public/uploads/index.html
@@ -128,6 +128,7 @@
       text-decoration: underline;
     }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 <body>
   <div class="card">
