--- a/public/mail/index.html
+++ b/public/mail/index.html
@@ -275,6 +275,7 @@
       #auth-bar { width: 100%; justify-content: flex-start; }
     }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 
 <body>
