--- a/public/messaging/scouts/index.html
+++ b/public/messaging/scouts/index.html
@@ -243,6 +243,7 @@
       header{ align-items:flex-start; }
     }
   </style>
+  <link rel="stylesheet" href="/modern-2026.css" />
 </head>
 
 <body>
