--- a/public-styled/home/index.html
+++ b/public-styled/home/index.html
@@ -544,6 +544,14 @@
             <p class="feature-text">View and edit personal account info.</p>
           </div>
         </a>
+
+        <a href="clash-royale.troop-248.com" class="feature-card-link" data-title="Useful Links">
+          <div class="feature-card">
+            <div class="feature-badge">This is Why We Clash</div>
+            <h3 class="feature-title">Clash Royale Player Lookup</h3>
+            <p class="feature-text">Use your Player ID in Clash Royale to find account information including trophy status, arena information, clan information, battle log, and much more.</p>
+          </div>
+        </a>
       </div>
 
       <div class="quick-note">
