--- a/public-styled/home/index.html
+++ b/public-styled/home/index.html
@@ -545,7 +545,7 @@
           </div>
         </a>
 
-        <a href="clash-royale.troop-248.com" class="feature-card-link" data-title="Useful Links">
+        <a href="https://clash-royale.troop-248.com" class="feature-card-link" data-title="Clash Royale Player Lookup">
           <div class="feature-card">
             <div class="feature-badge">This is Why We Clash</div>
             <h3 class="feature-title">Clash Royale Player Lookup</h3>
