--- a/public-styled/chests/index.html
+++ b/public-styled/chests/index.html
@@ -244,11 +244,12 @@
     @media (max-width: 640px) { .badges { grid-template-columns: 1fr; } }
 
     .badge-card {
-      border: 1px solid rgba(148, 163, 184, 0.45);
-      background: #f9fafb;
-      border-radius: 14px;
-      padding: 12px;
-    }
+  border: 1px solid rgba(31, 78, 121, 0.18);
+  background: rgba(31, 78, 121, 0.06);   /* soft blue tint */
+  border-radius: 14px;
+  padding: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+}
     .badge-top {
       display: flex;
       align-items: flex-start;
